--- a/2_extract_data.ipynb
+++ b/2_extract_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['eia8602005.zip', 'eia8602008.zip', 'eia8602009.zip', 'eia8602010.zip', 'eia8602011.zip', 'eia8602012.zip', 'eia8602013.zip', 'eia8602014.zip', 'eia8602015.zip', 'eia8602016.zip', 'eia8602017.zip', 'eia8602018.zip', 'eia8602019.zip', 'eia8602020.zip', 'eia8602021.zip', 'eia8602021ER.zip', 'f8612015.zip', 'f8612016.zip', 'f8612017.zip', 'f8612018.zip', 'f8612019.zip', 'f8612020.zip', 'f8612021.zip', 'f906920_2005.zip', 'f923_2008.zip', 'f923_2009.zip', 'f923_2010.zip', 'f923_2011.zip', 'f923_2012.zip', 'f923_2013.zip', 'f923_2014.zip', 'f923_2015.zip', 'f923_2016.zip', 'f923_2017.zip', 'f923_2018.zip', 'f923_2019.zip', 'f923_2020.zip', 'f923_2021.zip', 'f923_2021ER.zip', 'f923_2022.zip']\n"
+      "['eia8602001.zip', 'eia8602002.zip', 'eia8602003.zip', 'eia8602004.zip', 'eia8602005.zip', 'eia8602006.zip', 'eia8602007.zip', 'eia8602008.zip', 'eia8602009.zip', 'eia8602010.zip', 'eia8602011.zip', 'eia8602012.zip', 'eia8602013.zip', 'eia8602014.zip', 'eia8602015.zip', 'eia8602016.zip', 'eia8602017.zip', 'eia8602018.zip', 'eia8602019.zip', 'eia8602020.zip', 'eia8602021.zip', 'f8612012.zip', 'f8612013.zip', 'f8612014.zip', 'f8612015.zip', 'f8612016.zip', 'f8612017.zip', 'f8612018.zip', 'f8612019.zip', 'f8612020.zip', 'f8612021.zip', 'f923_2008.zip', 'f923_2009.zip', 'f923_2010.zip', 'f923_2011.zip', 'f923_2012.zip', 'f923_2013.zip', 'f923_2014.zip', 'f923_2015.zip', 'f923_2016.zip', 'f923_2017.zip', 'f923_2018.zip', 'f923_2019.zip', 'f923_2020.zip', 'f923_2021.zip', 'f923_2022.zip']\n"
      ]
     }
    ],
@@ -34,14 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "eia8602001\n",
+      "eia8602002\n",
+      "eia8602003\n",
+      "eia8602004\n",
       "eia8602005\n",
+      "eia8602006\n",
+      "eia8602007\n",
       "eia8602008\n",
       "eia8602009\n",
       "eia8602010\n",
@@ -56,7 +62,9 @@
       "eia8602019\n",
       "eia8602020\n",
       "eia8602021\n",
-      "eia8602021ER\n",
+      "f8612012\n",
+      "f8612013\n",
+      "f8612014\n",
       "f8612015\n",
       "f8612016\n",
       "f8612017\n",
@@ -64,7 +72,6 @@
       "f8612019\n",
       "f8612020\n",
       "f8612021\n",
-      "f906920_2005\n",
       "f923_2008\n",
       "f923_2009\n",
       "f923_2010\n",
@@ -79,7 +86,6 @@
       "f923_2019\n",
       "f923_2020\n",
       "f923_2021\n",
-      "f923_2021ER\n",
       "f923_2022\n"
      ]
     }
@@ -116,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
