--- a/3_read_data.ipynb
+++ b/3_read_data.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['inputs/eia8602005', 'inputs/eia8602008', 'inputs/eia8602009', 'inputs/eia8602010', 'inputs/eia8602011', 'inputs/eia8602012', 'inputs/eia8602013', 'inputs/eia8602014', 'inputs/eia8602015', 'inputs/eia8602016', 'inputs/eia8602017', 'inputs/eia8602018', 'inputs/eia8602019', 'inputs/eia8602020', 'inputs/eia8602021', 'inputs/eia8602021ER', 'inputs/f8612015', 'inputs/f8612016', 'inputs/f8612017', 'inputs/f8612018', 'inputs/f8612019', 'inputs/f8612020', 'inputs/f906920_2005', 'inputs/f923_2008', 'inputs/f923_2009', 'inputs/f923_2010', 'inputs/f923_2011', 'inputs/f923_2012', 'inputs/f923_2013', 'inputs/f923_2014', 'inputs/f923_2015', 'inputs/f923_2016', 'inputs/f923_2017', 'inputs/f923_2018', 'inputs/f923_2019', 'inputs/f923_2020', 'inputs/f923_2021', 'inputs/f923_2021ER', 'inputs/zips']\n"
+      "['inputs/eia8602001', 'inputs/eia8602002', 'inputs/eia8602003', 'inputs/eia8602004', 'inputs/eia8602005', 'inputs/eia8602006', 'inputs/eia8602007', 'inputs/eia8602008', 'inputs/eia8602009', 'inputs/eia8602010', 'inputs/eia8602011', 'inputs/eia8602012', 'inputs/eia8602013', 'inputs/eia8602014', 'inputs/eia8602015', 'inputs/eia8602016', 'inputs/eia8602017', 'inputs/eia8602018', 'inputs/eia8602019', 'inputs/eia8602020', 'inputs/eia8602021', 'inputs/f8612012', 'inputs/f8612013', 'inputs/f8612014', 'inputs/f8612015', 'inputs/f8612016', 'inputs/f8612017', 'inputs/f8612018', 'inputs/f8612019', 'inputs/f8612020', 'inputs/f8612021', 'inputs/f923_2008', 'inputs/f923_2009', 'inputs/f923_2010', 'inputs/f923_2011', 'inputs/f923_2012', 'inputs/f923_2013', 'inputs/f923_2014', 'inputs/f923_2015', 'inputs/f923_2016', 'inputs/f923_2017', 'inputs/f923_2018', 'inputs/f923_2019', 'inputs/f923_2020', 'inputs/f923_2021', 'inputs/f923_2022', 'inputs/zips']\n"
      ]
     }
    ],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -247,24 +247,24 @@
       "(37486, 98)\n",
       "Index(['Plant Id', 'Combined Heat And\\nPower Plant', 'Nuclear Unit Id'], dtype='object')\n",
       "2017\n",
-      "(13382, 98)\n",
-      "(50868, 98)\n",
+      "(13379, 98)\n",
+      "(50865, 98)\n",
       "Index(['Plant Id', 'Combined Heat And\\nPower Plant', 'Nuclear Unit Id'], dtype='object')\n",
       "2018\n",
       "(13959, 98)\n",
-      "(64827, 98)\n",
+      "(64824, 100)\n",
       "Index(['Plant Id', 'Combined Heat And\\nPower Plant', 'Nuclear Unit Id'], dtype='object')\n",
       "2019\n",
       "(14517, 98)\n",
-      "(79344, 98)\n",
+      "(79341, 100)\n",
       "Index(['Plant Id', 'Combined Heat And\\nPower Plant', 'Nuclear Unit Id'], dtype='object')\n",
       "2020\n",
       "(15115, 98)\n",
-      "(94459, 100)\n",
+      "(94456, 100)\n",
       "Index(['Plant Id', 'Combined Heat And\\nPower Plant', 'Nuclear Unit Id'], dtype='object')\n",
       "2021\n",
-      "(15798, 98)\n",
-      "(110257, 100)\n",
+      "(15796, 98)\n",
+      "(110252, 100)\n",
       "Index(['Plant Id', 'Combined Heat And\\nPower Plant', 'Nuclear Unit Id'], dtype='object')\n"
      ]
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -312,20 +312,20 @@
       "(16645, 28)\n",
       "Index(['Plant Id', 'Combined Heat And\\n Power Plant', 'Plant Name'], dtype='object')\n",
       "2018\n",
-      "(4001, 28)\n",
-      "(20646, 28)\n",
+      "(4001, 30)\n",
+      "(20646, 30)\n",
       "Index(['Plant Id', 'Combined Heat And\\n Power Plant', 'Plant Name'], dtype='object')\n",
       "2019\n",
-      "(3928, 28)\n",
-      "(24574, 28)\n",
+      "(3928, 30)\n",
+      "(24574, 30)\n",
       "Index(['Plant Id', 'Combined Heat And\\n Power Plant', 'Plant Name'], dtype='object')\n",
       "2020\n",
       "(3844, 30)\n",
       "(28418, 30)\n",
       "Index(['Plant Id', 'Combined Heat And\\n Power Plant', 'Plant Name'], dtype='object')\n",
       "2021\n",
-      "(3767, 30)\n",
-      "(32185, 30)\n",
+      "(3775, 30)\n",
+      "(32193, 30)\n",
       "Index(['Plant Id', 'Combined Heat And\\n Power Plant', 'Plant Name'], dtype='object')\n"
      ]
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -373,20 +373,20 @@
       "(41002, 66)\n",
       "Index(['Plant Id', 'Combined Heat And\\n Power Plant', 'Plant Name'], dtype='object')\n",
       "2018\n",
-      "(9715, 66)\n",
-      "(50717, 66)\n",
+      "(9715, 68)\n",
+      "(50717, 68)\n",
       "Index(['Plant Id', 'Combined Heat And\\n Power Plant', 'Plant Name'], dtype='object')\n",
       "2019\n",
-      "(9553, 66)\n",
-      "(60270, 66)\n",
+      "(9553, 68)\n",
+      "(60270, 68)\n",
       "Index(['Plant Id', 'Combined Heat And\\n Power Plant', 'Plant Name'], dtype='object')\n",
       "2020\n",
       "(9319, 68)\n",
       "(69589, 68)\n",
       "Index(['Plant Id', 'Combined Heat And\\n Power Plant', 'Plant Name'], dtype='object')\n",
       "2021\n",
-      "(9154, 68)\n",
-      "(78743, 68)\n",
+      "(9170, 68)\n",
+      "(78759, 68)\n",
       "Index(['Plant Id', 'Combined Heat And\\n Power Plant', 'Plant Name'], dtype='object')\n"
      ]
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
       "       'Elec Fuel Consumption\\nMMBtu', 'Net Generation\\n(Megawatthours)',\n",
       "       'YEAR', 'YR', 'Balancing\\nAuthority Code', 'Respondent\\nFrequency'],\n",
       "      dtype='object')\n",
-      "(110257, 100)\n",
+      "(110252, 100)\n",
       "Index(['Plant Id', 'Combined Heat And\\n Power Plant', 'Plant Name',\n",
       "       'Operator Name', 'Operator Id', 'Plant State', 'Census Region',\n",
       "       'NERC Region', 'NAICS Code', 'Sector Number', 'Sector Name',\n",
@@ -550,7 +550,7 @@
       "       'Net Generation\\nYear To Date', 'YEAR', 'YR', 'Respondent\\nFrequency',\n",
       "       'Balancing\\nAuthority Code'],\n",
       "      dtype='object')\n",
-      "(32185, 30)\n"
+      "(32193, 30)\n"
      ]
     },
     {
@@ -588,7 +588,7 @@
       "       'Total Fuel Consumption\\nQuantity', 'YEAR', 'YR',\n",
       "       'Respondent\\nFrequency', 'Balancing\\nAuthority Code'],\n",
       "      dtype='object')\n",
-      "(78743, 68)\n"
+      "(78759, 68)\n"
      ]
     }
    ],
@@ -649,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
