--- a/4_play_with_data.ipynb
+++ b/4_play_with_data.ipynb
@@ -2,10 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#this worksheet contains different examples of how to use the raw data files for various one off analyses.\n",
+    "\n",
+    "\n",
     "#importing packages needed for analysis\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -14,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -123,16 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(110257, 7)\n",
-      "(25257, 7)\n",
-      "(5624, 7)\n",
+      "(110252, 7)\n",
+      "(25251, 7)\n",
+      "(5621, 7)\n",
       "(4223, 4)\n",
       "(3122, 4)\n",
       "\n",
@@ -224,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
